# svm-test

./: .gitmodules  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  taplo.toml
.github/workflows/: ci.yml
.github/workflows/actions/rust-toolchain/: action.yml
.github/workflows/actions/solana-toolchain/: action.yml
crates/svm-test/: Cargo.toml
crates/svm-test/src/: harness.rs  lib.rs  ser.rs  spl.rs  svm.rs  test_rpc.rs  traits.rs
crates/svm-test/src/utils/: load_elf.rs  locate_manifest.rs  mod.rs  pack_to_vec.rs  read_json_gz.rs  spl_token.rs  test_payer.rs  write_on_drop.rs
crates/svm-test/tests/: program_integration_test.rs  program_unit_test.rs
programs/faucet/: Cargo.toml
programs/faucet/src/: entrypoint.rs  lib.rs  processor.rs
programs/memo/: Cargo.toml
programs/memo/src/: entrypoint.rs  lib.rs
scripts/: build_sbf.sh
