[workspace]
resolver = "2"
members = ["crates/*", "programs/*"]

[workspace.dependencies]
auto_impl = "1.2.0"
faucet = { path = "./programs/faucet" }
litesvm = { git = "https://github.com/OliverNChalk/litesvm", branch = "solana-2" }
solana-account-decoder = "2.0.13"
solana-client = "2.0.13"
solana-logger = "2.0.13"
solana-program = "2.0.13"
solana-sdk = "2.0.13"
spl-associated-token-account = "5.0.1"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }

[patch.crates-io]
solana-account-decoder = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-address-lookup-table-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-bpf-loader-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-client = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-compute-budget = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-compute-budget-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-config-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-fee = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-loader-v4-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-log-collector = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-program-runtime = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-quic-client = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-runtime-transaction = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-sdk = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-stake-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-svm = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-svm-transaction = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-system-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-timings = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-vote-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-zk-token-sdk = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
curve25519-dalek = { git = "https://github.com/OliverNChalk/curve25519-dalek", rev = "af1ed144753dfac0ae1e58005688e581a5f2c6b4" }
