[workspace]
resolver = "2"
members = ["crates/*", "programs/*"]

[workspace.dependencies]
auto_impl = "1.2.0"
faucet = { path = "./programs/faucet" }
litesvm = { git = "https://github.com/OliverNChalk/litesvm" }
solana-account-decoder = "2.0.13"
solana-client = "2.0.13"
solana-logger = "2.0.13"
solana-program = "2.0.13"
solana-sdk = "2.0.13"
spl-associated-token-account = "5.0.1"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.0", features = ["no-entrypoint"] }
