[workspace]
resolver = "2"
members = ["crates/*", "programs/*"]

[workspace.dependencies]
auto_impl = "1.2.0"
faucet = { path = "./programs/faucet" }
litesvm = { git = "https://github.com/OliverNChalk/litesvm" }
solana-account-decoder = "2.1"
solana-client = "2.1"
solana-logger = "2.1"
solana-program = "2.1"
solana-sdk = "2.1"
spl-associated-token-account = "6.0.0"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
