[package]
name = "svm-test"
version = "0.1.1"
edition = "2021"

[features]
default = []
spl = ["dep:spl-associated-token-account", "dep:spl-token", "dep:spl-token-2022"]

[dependencies]
async-trait = "0.1.81"
auto_impl.workspace = true
dashmap = "6.0.1"
derivative = "2.2.0"
flate2 = "1.0.32"
futures = "0.3.30"
itertools = "0.13.0"
litesvm = { workspace = true }
serde = "1.0.208"
serde_json = "1.0.125"
serde_with = { version = "3.9.0", features = ["hex"] }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true, optional = true }
spl-token = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }
tokio = "1.39.3"
tracing = "0.1.40"

[dev-dependencies]
expect-test = "1.5.0"
faucet = { workspace = true }

[[test]]
name = "program_integration_test"
required-features = ["spl"]
